--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,7 +4,10 @@
 
 @layer components {
     .full-page-dark {
-        @apply h-screen bg-backgroundDark text-gray-300 items-center justify-center flex font-cat
+        @apply h-screen bg-backgroundDark text-gray-300 items-center justify-center flex
+    }
+    .temp {
+        @apply h-screen bg-temp text-gray-300 items-center justify-center flex
     }
     .link {
         @apply text-accent
