--- a/src/css/index.css
+++ b/src/css/index.css
@@ -60,7 +60,7 @@
     @apply bg-backgroundDark text-mainDark fade
 }
 .nav-dark {
-    @apply bg-temp text-gray-300 fade
+    @apply bg-quatDark text-gray-300 fade
 }
 .link-dark {
     @apply text-accent fade
