minor wording change, added dropshadow, refactor
- Changed wording in intro paragraph
- Added dropshadow to nav
- removed nav small as it was only a height change.
- Added height into nav ternary css
- Defaults to lightmode now instead of darkmode

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,10 +7,7 @@
     @apply h-screen items-center justify-center flex
 }
 .nav {
-    @apply w-full h-16 z-10 items-center flex flex-row justify-between fixed
-}
-.nav-small {
-    @apply w-full h-12 z-10 items-center flex flex-row justify-between fixed
+    @apply w-full z-10 items-center flex flex-row justify-between fixed shadow-lg
 }
 .nav-options {
     @apply flex flex-row
