--- a/src/css/components/index.css
+++ b/src/css/components/index.css
@@ -1,23 +1,24 @@
-.sampleContent                   { @apply z-10 leading-normal text-lg px-4 mb-12 break-words font-bold }
-@screen 360  {.sampleContent     { @apply text-xl w-84 px-0 }}
-@screen 500  {.sampleContent     { @apply text-xl w-104 }}
-@screen 640  {.sampleContent     { @apply text-2xl w-128 mb-16 }}
-@screen 800  {.sampleContent     { @apply w-[44rem] }}
-@screen 1024 {.sampleContent     { @apply w-192 leading-relaxed }}
+.homeIntroRow                   { @apply max-w-[550px] mx-8 }
+@screen 800  {.homeIntroRow     { @apply max-w-screen-800 }}
+@screen 1024 {.homeIntroRow     { @apply max-w-screen-1024 }}
 
-.sampleSpacing                  { @apply mt-12 }
-@screen 640  {.sampleSpacing    { @apply mt-16 }}
+.homeContent                    { @apply justify-center items-start flex-grow-default cursor-default h-76 }
+@screen 800  {.homeContent      { @apply h-auto }}
 
+.homeTitle                      { @apply text-12 font-bold text-lightBlue leading-none }
+@screen 440  {.homeTitle        { @apply text-[3.25rem] }}
+@screen 500  {.homeTitle        { @apply text-14 }}
 
-.sampleTextLink                 { @apply underline whitespace-nowrap }
-.sampleTextLink:hover           { @apply text-white bg-lightBlue rounded-1 no-underline }
+.homeSubtitle                   { @apply text-7 leading-tight py-3 }
+@screen 360  {.homeSubtitle     { @apply text-8 }}
+@screen 440  {.homeSubtitle     { @apply text-4xl }}
+@screen 500  {.homeSubtitle     { @apply text-10 }}
 
-.sampleTitle                    { @apply text-7 font-bold text-lightBlue mb-2 leading-none }
-@screen 360  {.sampleTitle      { @apply text-3xl }}
-@screen 500  {.sampleTitle      { @apply text-4xl }}
-@screen 640  {.sampleTitle      { @apply text-5xl mb-3 }}
+.homeBody                       { @apply text-base }
+@screen 440  {.homeBody         { @apply text-base }}
+@screen 500  {.homeBody         { @apply text-lg }}
 
-.circle-image                   { @apply w-64 h-64 rounded-full }
+.homeTextLink                   { @apply underline whitespace-nowrap }
+.homeTextLink:hover             { @apply text-white bg-lightBlue rounded-1 no-underline }
 
-.subtitle                       { @apply font-light text-xl max-w-screen-1024 pb-2 }
-
+.circle-image                   { @apply w-64 h-64 rounded-full bg-darkBlue }
