--- a/src/css/components.css
+++ b/src/css/components.css
@@ -10,6 +10,6 @@
     @import "./components/nav.css";
     @import "./components/util.css";
     /*--- More CSS files go here ---*/
-
+    @import "./components/contact.css";
     /*---   End more CSS files   ---*/
 }
