updated styling on projects

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -11,5 +11,6 @@
     @import "./components/util.css";
     /*--- More CSS files go here ---*/
     @import "./components/contact.css";
+    @import "./components/projects.css";
     /*---   End more CSS files   ---*/
 }
