--- a/src/css/components/nav.css
+++ b/src/css/components/nav.css
@@ -1,35 +1,39 @@
-.nav                            { @apply w-full z-50 items-center flex flex-row justify-between text-white }
+.nav                                { @apply w-full h-16 bg-black z-50 items-center flex flex-row justify-start text-white fixed }
+@screen 640  {.nav 				    { @apply static bg-darkBlue justify-between }}
+@screen 1921 {.nav                  { @apply justify-center }}
 
-.nav-height                     { @apply h-14 }
+/* keeps elements from going underneath fixed nav on mobile */
+.nav-placeholder				    { @apply w-full h-16 bg-black static block }
+@screen 640  {.nav-placeholder      { @apply hidden }}
 
-.nav-logo > img                 { @apply text-center }
-.nav-logo                       { @apply w-40 z-50 flex-grow-0 ml-6 mr-4 flex-shrink-0 py-2 object-scale-down }
-@screen 1280 {.nav-logo         { @apply ml-6 }}
-@screen 1921 {.nav-logo         { @apply absolute }}
+.mainLogo						    { @apply w-[160px] h-[27px] ml-4 mr-2 select-none object-contain}
 
-.nav-link-list                  { @apply w-full h-full flex-col mr-0 flex items-center justify-end }
-@screen 640  {.nav-link-list    { @apply flex-row static h-full bg-transparent }}
-@screen 1921 {.nav-link-list    { @apply justify-center max-w-6xl }}
+.icon                               { @apply ml-4 py-2 cursor-pointer z-50 flex-shrink-0 my-auto text-LightGray2}
+@screen 640  {.icon                 { @apply hidden }}
 
-.nav-desktop                    { @apply hidden }
-@screen 640  {.nav-desktop      { @apply flex flex-grow-default max-w-screen-500 }}
+/* the drop down after you click on the icon */
+.nav-overlay                        { @apply w-screen h-full fixed top-[64px] left-0 bg-darkBlue opacity-80 }
+@screen 640  {.nav-overlay          { @apply hidden}}
 
-.nav-mobile                     { @apply flex flex-col w-64 h-64 align-top z-40 top-0 right-0 absolute flex-grow-default items-end bg-darkBlue }
-@screen 640  {.nav-mobile       { @apply hidden }}
+.nav-links-desktop                  { @apply hidden }
+@screen 640  {.nav-links-desktop    { @apply w-full max-w-72 h-full flex flex-row static flex-grow-default bg-transparent items-center justify-end pb-0 }}
+@screen 1921 {.nav-links-desktop    { @apply justify-center }}
 
-.icon                           { @apply h-20 mr-5 }
-@screen 800  {.icon             { @apply hidden }}
+.nav-links-mobile                   { @apply w-56 h-screen bg-white flex flex-col mr-0 items-start justify-start pb-4 fixed top-[64px] -translate-x-76 ease-in-out duration-200 }
+@screen 640  {.nav-links-mobile     { @apply hidden }}
 
-.page-links                     { @apply flex flex-col justify-around flex-grow-default }
-@screen 640  {.page-links       { @apply flex flex-row justify-end space-x-12 mr-6}}
-@screen 1280 {.page-links       { @apply mr-12}}
-@screen 1921 {.page-links       { @apply justify-center mr-0 }}
+.nav-opened                         { @apply translate-x-0 }
 
-.button-links                   { @apply flex flex-col h-32 justify-around w-48 text-lg }
-@screen 800  {.button-links     { @apply h-10 flex-row items-center content-around py-10 w-64 pr-2 }}
-@screen 1024 {.button-links     { @apply pr-0 }}
+.nav-link-active                    { @apply text-black font-bold bg-LightGray2 }
+.nav-link-inactive                  { @apply text-black font-semibold }
+.nav-link                           { @apply px-5 py-2 w-full text-left select-none  } /* Common styles across all link types */
+@screen 640  {
+    .nav-link		                { @apply py-0 px-0 w-auto border-0 select-all }
+    .nav-link:hover		            { @apply text-white }
+    .nav-link-active                { @apply text-white font-bold bg-transparent }
+    .nav-link-inactive              { @apply text-LightGray2 font-semibold }
+}
 
-.nav-hybrid-row                 { @apply flex-grow-default flex flex-row justify-end }
-@screen 1921 {.nav-hybrid-row   { @apply justify-center }}
-
-.nav-link-size                  { @apply text-lg }
+.page-link-wrapper                  { @apply flex flex-col items-start justify-around flex-grow-0 w-full mb-5 text-darkBlue text-xl}
+@screen 640  {.page-link-wrapper    { @apply flex flex-row items-center px-0 w-auto my-0 h-auto flex-grow-default text-base }}
+@screen 1024 {.page-link-wrapper    { @apply text-lg }}
