--- a/src/css/components/nav.css
+++ b/src/css/components/nav.css
@@ -1,39 +1,40 @@
 .nav                                { @apply w-full h-16 bg-black z-50 items-center flex flex-row justify-start text-white fixed }
-@screen 640  {.nav 				    { @apply static bg-darkBlue justify-between }}
+@screen 500  {.nav 				    { @apply static bg-darkBlue justify-between }}
 @screen 1921 {.nav                  { @apply justify-center }}
 
 /* keeps elements from going underneath fixed nav on mobile */
 .nav-placeholder				    { @apply w-full h-16 bg-black static block }
-@screen 640  {.nav-placeholder      { @apply hidden }}
+@screen 500  {.nav-placeholder      { @apply hidden }}
 
 .mainLogo						    { @apply w-[160px] h-[27px] ml-4 mr-2 select-none object-contain}
 
 .icon                               { @apply ml-4 py-2 cursor-pointer z-50 flex-shrink-0 my-auto text-LightGray2}
-@screen 640  {.icon                 { @apply hidden }}
+@screen 500  {.icon                 { @apply hidden }}
 
 /* the drop down after you click on the icon */
 .nav-overlay                        { @apply w-screen h-full fixed top-[64px] left-0 bg-darkBlue opacity-80 }
-@screen 640  {.nav-overlay          { @apply hidden}}
+@screen 500  {.nav-overlay          { @apply hidden}}
 
 .nav-links-desktop                  { @apply hidden }
-@screen 640  {.nav-links-desktop    { @apply w-full max-w-72 h-full flex flex-row static flex-grow-default bg-transparent items-center justify-end pb-0 }}
+@screen 500  {.nav-links-desktop    { @apply w-full max-w-72 h-full flex flex-row static flex-grow-default bg-transparent items-center justify-end pb-0 }}
 @screen 1921 {.nav-links-desktop    { @apply justify-center }}
 
-.nav-links-mobile                   { @apply w-56 h-screen bg-white flex flex-col mr-0 items-start justify-start pb-4 fixed top-[64px] -translate-x-76 ease-in-out duration-200 }
-@screen 640  {.nav-links-mobile     { @apply hidden }}
+.nav-links-mobile                   { @apply w-3/5 max-w-76 h-screen bg-white flex flex-col mr-0 items-start justify-start pb-4 fixed top-[64px] -translate-x-76 ease-in-out duration-200 }
+@screen 500  {.nav-links-mobile     { @apply hidden }}
 
 .nav-opened                         { @apply translate-x-0 }
 
 .nav-link-active                    { @apply text-black font-bold bg-LightGray2 }
 .nav-link-inactive                  { @apply text-black font-semibold }
 .nav-link                           { @apply px-5 py-2 w-full text-left select-none  } /* Common styles across all link types */
-@screen 640  {
+@screen 500  {
     .nav-link		                { @apply py-0 px-0 w-auto border-0 select-all }
     .nav-link:hover		            { @apply text-white }
     .nav-link-active                { @apply text-white font-bold bg-transparent }
     .nav-link-inactive              { @apply text-LightGray2 font-semibold }
+    .nav-link-mobile                { @apply hidden }
 }
 
 .page-link-wrapper                  { @apply flex flex-col items-start justify-around flex-grow-0 w-full mb-5 text-darkBlue text-xl}
-@screen 640  {.page-link-wrapper    { @apply flex flex-row items-center px-0 w-auto my-0 h-auto flex-grow-default text-base }}
+@screen 500  {.page-link-wrapper    { @apply flex flex-row items-center px-0 w-auto my-0 h-auto flex-grow-default text-base }}
 @screen 1024 {.page-link-wrapper    { @apply text-lg }}
