--- a/src/css/components/nav.css
+++ b/src/css/components/nav.css
@@ -19,22 +19,22 @@
 @screen 500  {.nav-links-desktop    { @apply w-full max-w-72 h-full flex flex-row static flex-grow-default bg-transparent items-center justify-end pb-0 }}
 @screen 1921 {.nav-links-desktop    { @apply justify-center }}
 
-.nav-links-mobile                   { @apply w-3/5 max-w-76 h-screen bg-white flex flex-col mr-0 items-start justify-start pb-4 fixed top-[64px] -translate-x-76 ease-in-out duration-200 }
+.nav-links-mobile                   { @apply w-full h-auto bg-white flex flex-col mr-0 items-start justify-start fixed top-[64px] -translate-y-full ease-in-out duration-200 }
 @screen 500  {.nav-links-mobile     { @apply hidden }}
 
-.nav-opened                         { @apply translate-x-0 }
+.nav-opened                         { @apply translate-y-0 }
 
-.nav-link-active                    { @apply text-black font-bold bg-LightGray2 }
+.nav-link-active                    { @apply text-white font-bold bg-main }
 .nav-link-inactive                  { @apply text-black font-semibold }
-.nav-link                           { @apply px-5 py-2 w-full text-left select-none  } /* Common styles across all link types */
+.nav-link                           { @apply px-5 py-2 w-[90%] text-left select-none mx-auto my-1 rounded-2 } /* Common styles across all link types */
 @screen 500  {
-    .nav-link		                { @apply py-0 px-0 w-auto border-0 select-all }
+    .nav-link		                { @apply py-0 px-0 w-auto border-0 select-all my-0 rounded-0 }
     .nav-link:hover		            { @apply text-white }
     .nav-link-active                { @apply text-white font-bold bg-transparent }
     .nav-link-inactive              { @apply text-LightGray2 font-semibold }
     .nav-link-mobile                { @apply hidden }
 }
 
-.page-link-wrapper                  { @apply flex flex-col items-start justify-around flex-grow-0 w-full mb-5 text-darkBlue text-xl}
+.page-link-wrapper                  { @apply flex flex-col items-start justify-around flex-grow-0 w-full my-5 text-darkBlue text-xl}
 @screen 500  {.page-link-wrapper    { @apply flex flex-row items-center px-0 w-auto my-0 h-auto flex-grow-default text-base }}
 @screen 1024 {.page-link-wrapper    { @apply text-lg }}
