--- a/src/css/components/footer.css
+++ b/src/css/components/footer.css
@@ -1,4 +1,4 @@
-.footer                         { @apply w-full pl-6 bg-black relative z-50 shadow-lg flex flex-col items-start pt-2 pb-3}
+.footer                         { @apply w-full pl-6 bg-black relative z-50 shadow-lg flex flex-col items-start py-2}
 @screen 768  {.footer           { @apply pl-4 } }
 
 .footer-links                   { @apply flex flex-col justify-evenly mb-0 h-16 items-center w-screen }
