--- a/src/css/components/nav.css
+++ b/src/css/components/nav.css
@@ -26,7 +26,7 @@
 
 .nav-link-active                    { @apply text-white font-bold bg-main }
 .nav-link-inactive                  { @apply text-black font-semibold }
-.nav-link                           { @apply px-5 py-2 w-[90%] text-left select-none mx-auto my-1 rounded-2 } /* Common styles across all link types */
+.nav-link                           { @apply pl-4 pr-5 py-2 w-[90%] text-left select-none mx-auto my-1 rounded-2 } /* Common styles across all link types */
 @screen 500  {
     .nav-link		                { @apply py-0 px-0 w-auto border-0 select-all my-0 rounded-0 }
     .nav-link:hover		            { @apply text-white }
