--- a/src/css/components/nav.css
+++ b/src/css/components/nav.css
@@ -1,40 +1,31 @@
-.nav                                { @apply w-full h-12 bg-black z-50 items-center flex flex-row justify-start text-white fixed }
-@screen 500  {.nav 				    { @apply static bg-black justify-between }}
+.nav                                { @apply backdrop-blur w-full h-12 bg-transparent z-50 items-center flex flex-row justify-between text-white fixed py-2 px-4 }
 @screen 1921 {.nav                  { @apply justify-center }}
 
-/* keeps elements from going underneath fixed nav on mobile */
-.nav-placeholder				    { @apply w-full h-12 bg-black static block }
-@screen 500  {.nav-placeholder      { @apply hidden }}
+.mainLogo						    { @apply w-[160px] h-[27px] select-none object-contain invert z-50 shadow-brightRed box-content }
 
-.mainLogo						    { @apply w-[160px] h-[27px] ml-4 mr-2 select-none object-contain}
-
-.icon                               { @apply ml-4 py-2 cursor-pointer z-50 flex-shrink-0 my-auto text-LightGray2}
+.icon                               { @apply w-auto h-full cursor-pointer z-50 flex-shrink-0 text-black box-content }
 @screen 500  {.icon                 { @apply hidden }}
 
 /* the drop down after you click on the icon */
-.nav-overlay                        { @apply w-screen h-full fixed top-[48px] left-0 bg-darkBlue opacity-80 }
+.nav-overlay                        { @apply w-screen h-screen fixed top-0 left-0 bg-darkBlue opacity-80 }
 @screen 500  {.nav-overlay          { @apply hidden}}
 
-.nav-links-desktop                  { @apply hidden }
-@screen 500  {.nav-links-desktop    { @apply w-full max-w-72 h-full flex flex-row static flex-grow-default bg-transparent items-center justify-end pb-0 }}
-@screen 1921 {.nav-links-desktop    { @apply justify-center }}
+.nav-opened                         { @apply duration-200 !visible !translate-y-0 }
+@screen 500  {.nav-opened           { @apply duration-[0ms] }}
 
-.nav-links-mobile                   { @apply w-full h-auto bg-white flex flex-col mr-0 items-start justify-start fixed top-[48px] -translate-y-full ease-in-out duration-200 }
-@screen 500  {.nav-links-mobile     { @apply hidden }}
-
-.nav-opened                         { @apply translate-y-0 }
-
-.nav-link-active                    { @apply text-white font-bold bg-main }
-.nav-link-inactive                  { @apply text-black font-semibold }
-.nav-link                           { @apply pl-4 pr-5 py-2 w-[90%] text-left select-none mx-auto my-1 rounded-2 } /* Common styles across all link types */
+.nav-link-active                    { @apply text-white !font-bold bg-main }
+.nav-link                           { @apply pl-3 py-2 w-full select-none my-1 font-semibold rounded-2 text-left } /* Common styles across all link types */
 @screen 500  {
-    .nav-link		                { @apply py-0 px-0 w-auto border-0 select-all my-0 rounded-0 }
-    .nav-link:hover		            { @apply text-white }
-    .nav-link-active                { @apply text-white font-bold bg-transparent }
-    .nav-link-inactive              { @apply text-LightGray2 font-semibold }
+    .nav-link		                { @apply px-2 py-1 w-28 my-0 text-center }
+    .nav-link-inactive:hover		{ @apply text-LightGray4 }
+    .nav-link-active                { @apply text-white !font-bold bg-main }
+    .nav-link-inactive              { @apply text-black }
     .nav-link-mobile                { @apply hidden }
 }
 
-.page-link-wrapper                  { @apply flex flex-col items-start justify-around flex-grow-0 w-full my-5 text-darkBlue text-xl}
-@screen 500  {.page-link-wrapper    { @apply flex flex-row items-center px-0 w-auto my-0 h-auto flex-grow-default text-base }}
-@screen 1024 {.page-link-wrapper    { @apply text-lg }}
+.page-link-wrapper                  { @apply z-[49] w-full h-auto pb-4 text-darkBlue text-xl bg-white fixed top-0 left-0 pt-12 -translate-y-full ease-in-out px-4 }
+@screen 500  {.page-link-wrapper    { @apply gap-5 w-auto h-auto visible flex flex-row justify-end items-center p-0 my-0 text-lg bg-transparent static translate-y-0  }}
+
+.social-buttons                     { @apply flex flex-row justify-end gap-5 z-50 h-full }
+.social-button                      { @apply h-full w-auto cursor-pointer }
+.social-button:hover                { @apply opacity-75 }
