--- a/src/css/components/nav.css
+++ b/src/css/components/nav.css
@@ -1,7 +1,5 @@
-.nav                                { @apply backdrop-blur w-full h-12 bg-transparent z-50 items-center flex flex-row justify-between text-white fixed py-2 px-4 }
+.nav                                { @apply backdrop-blur w-full h-12 bg-transparent z-50 flex flex-row justify-between text-white fixed py-2 px-4 }
 @screen 1921 {.nav                  { @apply justify-center }}
-
-.mainLogo						    { @apply w-[160px] h-[27px] select-none object-contain invert z-50 shadow-brightRed box-content }
 
 .icon                               { @apply w-auto h-full cursor-pointer z-50 flex-shrink-0 text-black box-content }
 @screen 500  {.icon                 { @apply hidden }}
@@ -14,9 +12,9 @@
 @screen 500  {.nav-opened           { @apply duration-[0ms] }}
 
 .nav-link-active                    { @apply text-white !font-bold bg-main }
-.nav-link                           { @apply pl-3 py-2 w-full select-none my-1 font-semibold rounded-2 text-left } /* Common styles across all link types */
+.nav-link                           { @apply flex justify-start items-center pl-3 py-2 w-full select-none my-1 font-semibold rounded-2 text-left } /* Common styles across all link types */
 @screen 500  {
-    .nav-link		                { @apply px-2 py-1 w-28 my-0 text-center }
+    .nav-link		                { @apply justify-center px-2 py-0 h-full w-28 my-0 text-center }
     .nav-link-inactive:hover		{ @apply text-LightGray4 }
     .nav-link-active                { @apply text-white !font-bold bg-main }
     .nav-link-inactive              { @apply text-black }
@@ -24,7 +22,7 @@
 }
 
 .page-link-wrapper                  { @apply z-[49] w-full h-auto pb-4 text-darkBlue text-xl bg-white fixed top-0 left-0 pt-12 -translate-y-full ease-in-out px-4 }
-@screen 500  {.page-link-wrapper    { @apply gap-5 w-auto h-auto visible flex flex-row justify-end items-center p-0 my-0 text-lg bg-transparent static translate-y-0  }}
+@screen 500  {.page-link-wrapper    { @apply gap-5 w-auto h-full visible flex flex-row justify-end items-center p-0 my-0 text-lg bg-transparent static translate-y-0  }}
 
 .social-buttons                     { @apply flex flex-row justify-end gap-5 z-50 h-full }
 .social-button                      { @apply h-full w-auto cursor-pointer }
