--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,21 +1,12 @@
-.nav {
-    @apply backdrop-blur w-full h-12 bg-transparent z-50 flex flex-row justify-between text-white fixed py-2 px-4 top-0 left-0;
-}
-@screen 3xl {
-    .nav {
-        @apply justify-center;
-    }
-}
-
 .icon {
     @apply w-auto h-full z-50 flex-shrink-0 box-content;
 }
 
 /* the drop down after you click on the icon */
 .nav-overlay {
-    @apply w-screen h-screen fixed top-0 left-0 bg-darkBlue opacity-80;
+    @apply w-screen h-screen fixed top-0 left-0 bg-black opacity-75;
 }
-@screen sm {
+@screen md {
     .nav-overlay {
         @apply hidden;
     }
@@ -24,7 +15,7 @@
 .nav-opened {
     @apply duration-200 !visible !translate-y-0;
 }
-@screen sm {
+@screen md {
     .nav-opened {
         @apply duration-[0ms];
     }
@@ -37,30 +28,11 @@
     @apply opacity-75;
 }
 
-.nav-link-active {
-    @apply text-white bg-main;
-}
-.nav-link {
-    @apply flex justify-start items-center pl-3 py-2 w-full select-none my-1 font-bold rounded-md;
-} /* Common styles across all link types */
-@screen sm {
-    .nav-link {
-        @apply justify-center px-2 py-0 h-full w-40 my-0 text-center;
-    }
-    .nav-link-mobile {
-        @apply hidden;
-    }
-}
-
 .page-link-wrapper {
-    @apply z-[49] w-full h-auto pb-4 text-darkBlue text-xl bg-white fixed top-0 left-0 pt-12 -translate-y-full ease-in-out px-4;
+    @apply z-[49] w-screen h-auto pb-4 flex flex-col text-darkBlue text-xl bg-white fixed top-0 left-0 pt-12 -translate-y-full ease-in-out px-4 duration-200;
 }
-@screen sm {
+@screen md {
     .page-link-wrapper {
-        @apply gap-5 w-auto h-full visible flex flex-row justify-end items-center p-0 my-0 text-lg bg-transparent static translate-y-0;
+        @apply gap-5 w-auto h-full visible flex-row justify-end items-center p-0 my-0 text-lg bg-transparent static translate-y-0;
     }
-}
-
-.social-buttons {
-    @apply flex flex-row justify-end gap-5 h-full;
 }
