--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -29,7 +29,7 @@
 }
 
 .page-link-wrapper {
-    @apply z-[49] w-screen h-auto pb-4 flex flex-col text-darkBlue text-xl bg-white fixed top-0 left-0 pt-12 -translate-y-full ease-in-out px-4 duration-200;
+    @apply z-[49] w-full h-auto pb-4 flex flex-col text-darkBlue text-xl bg-white fixed top-0 left-0 pt-12 -translate-y-full ease-in-out duration-200;
 }
 @screen md {
     .page-link-wrapper {
